// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Vertical Navigation Condensed 1`] = `
<div
  class="fd-vertical-nav fd-vertical-nav--condensed"
>
  
    
  <nav
    aria-label="Main Menu 2"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu List 2"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--condensed"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--home"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--condensed"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--calendar"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--condensed"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--customer"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--condensed"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--shipping-status"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Vertical Navigation Default 1`] = `
<div
  class="fd-vertical-nav"
>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu List"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--home"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--expandable is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--calendar"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar Calendar Calendar Calendar Calendar Calendar 
        </span>
        
                
        <button
          aria-label="Expand submenu"
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2 Second level item 2 Second level item 2 Second level item 2 Second level item 2 
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--expandable is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--customer"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
                
        <button
          aria-label="Expand second submenu"
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item"
        tabindex="0"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--shipping-status"
          role="presentation"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Vertical Navigation Navigation Indication 1`] = `
<section>
  <div
    class="fd-vertical-nav"
  >
    
    
    <nav
      aria-label="Main Menu 3"
      class="fd-vertical-nav__main-navigation"
    >
      
        
      <ul
        aria-label="Main Menu List 3"
        class="fd-list"
      >
        
            
        <li
          class="fd-list__navigation-item"
          tabindex="0"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--home"
            role="presentation"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Overview
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item fd-list__navigation-item--expandable is-expanded"
          onclick="toggleVerticalNavSubmenu(event)"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--calendar"
            role="presentation"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Calendar
          </span>
          
                
          <button
            aria-label="Expand second submenu 3"
            class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
          />
          
                
          <ul
            class="fd-list"
          >
            
                    
            <li
              class="fd-list__navigation-item fd-list__navigation-item--indicated"
            >
              
                        
              <span
                class="fd-list__navigation-item-text"
              >
                Second level item 1
              </span>
              
                        
              <span
                class="fd-list__navigation-item-indicator"
              />
              
                    
            </li>
            
                    
            <li
              class="fd-list__navigation-item"
              tabindex="0"
            >
              
                        
              <span
                class="fd-list__navigation-item-text"
              >
                Second level item 2
              </span>
              
                    
            </li>
            
                
          </ul>
          
                
          <span
            class="fd-list__navigation-item-indicator"
          />
          
            
        </li>
        
        
      </ul>
      
    
    </nav>
    

  </div>
  

  <br />
  <br />
  

  <div
    class="fd-vertical-nav fd-vertical-nav--condensed"
  >
    
    
    <nav
      aria-label="Main Menu 4"
      class="fd-vertical-nav__main-navigation"
    >
      
        
      <ul
        aria-label="Main Menu List 4"
        class="fd-list"
      >
        
            
        <li
          class="fd-list__navigation-item fd-list__navigation-item--condensed"
          tabindex="0"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--home"
            role="presentation"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Overview
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item fd-list__navigation-item--condensed"
          id="parentCalendarButton"
          onclick="toggleCondensedVerticalNavSubmenu(event)"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--calendar"
            role="presentation"
          />
          
                
          <button
            aria-label="Expand second submenu 4"
            class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow"
          />
              
                
          <span
            class="fd-list__navigation-item-indicator"
          />
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--left fd-popover__body--no-arrow fd-list__navigation-item-popover--first-level"
            id="popoverA1"
          >
            
                    
            <ul
              class="fd-list"
            >
              
                        
              <li
                class="fd-list__navigation-item fd-list__navigation-item--condensed"
              >
                
                            
                <i
                  class="fd-list__navigation-item-icon sap-icon--calendar"
                  role="presentation"
                />
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Calendar
                </span>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--left fd-popover__body--no-arrow fd-list__navigation-item-popover--second-level"
            id="popoverA2"
          >
            
                    
            <ul
              class="fd-list"
            >
              
                        
              <li
                class="fd-list__navigation-item fd-list__navigation-item--condensed fd-list__navigation-item--indicated"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Second level item 1
                </span>
                
                            
                <span
                  class="fd-list__navigation-item-indicator"
                />
                
                        
              </li>
              
                        
              <li
                class="fd-list__navigation-item fd-list__navigation-item--condensed"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Second level item 2
                </span>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item fd-list__navigation-item--condensed"
          tabindex="0"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--customer"
            role="presentation"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Customers
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item fd-list__navigation-item--condensed"
          tabindex="0"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--shipping-status"
            role="presentation"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Deliveries
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </nav>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Vertical Navigation Text Only 1`] = `
<div
  class="fd-vertical-nav"
>
  
    
  <nav
    aria-label="Main Menu 3"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu List 3"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item"
        tabindex="0"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--expandable is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar
        </span>
        
                
        <button
          aria-label="Expand second submenu 3"
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item fd-list__navigation-item--expandable is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
                
        <button
          aria-label="Expand third submenu 2"
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item"
            tabindex="0"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item"
        tabindex="0"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;
